--- a/components.json
+++ b/components.json
@@ -6,9 +6,8 @@
   "tailwind": {
     "config": "tailwind.config.js",
     "css": "src/index.css",
-    "baseColor": "gray",
-    "cssVariables": true,
-    "prefix": "y"
+    "baseColor": "neutral",
+    "cssVariables": false
   },
   "aliases": {
     "components": "@/components",
